--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "DNA_damage_DOX_project"
+name: DNA_damage_DOX_project
 output_dir: ../docs
 navbar:
-  title: "DNA_damage_DOX_project"
+  title: DNA_damage_DOX_project
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fab fa-github
+    text: Source code
+    href: https://github.com/myname/DNA_damage_DOX
 output:
   workflowr::wflow_html:
     toc: yes
